--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="@string/firstfragment"
+    <item android:title="@string/firstMenuTitle"
         android:id="@+id/firstFragment"
-        android:icon="@drawable/baseline_coffee_24"/>
-    <item android:title="@string/secondfragment"
+        android:icon="@drawable/home_menu"/>
+    <item android:title="@string/secondMenuTitle"
         android:id="@+id/secondFragment"
-        android:icon="@drawable/baseline_coffee_24"/>
-    <item android:title="@string/thirdfragment"
+        android:icon="@drawable/list_menu"/>
+    <item android:title="@string/thirdMenuTitle"
         android:id="@+id/thirdFragment"
         android:icon="@drawable/baseline_coffee_24"/>
 </menu>
